# echologic-ai-chatbot-prototype

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 00c555091819_add_chat_history.py  87f650b6f335_db_init.py
backend/src/api/: routes.py
backend/src/api/v1/endpoints/: auth.py  chat.py  users.py
backend/src/core/: config.py  container.py  enums.py  logging_conf.py  security.py
backend/src/models/: __init__.py  base_model.py  conversation_model.py  message_model.py  user_model.py
backend/src/repository/: conversation_repository.py  message_repository.py  user_repository.py
backend/src/schemas/: chat_schema.py  user_schema.py
backend/src/services/: chat_service.py  llm_service.py  user_service.py
backend/src/util/: query_builder.py
